proper .npmrc config

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
 @guardian-network:registry=https://gitlab.com/api/v4/packages/npm/
 //gitlab.com/api/v4/packages/npm/:_authToken=${GUARDIAN_NPM_TOKEN}
-//gitlab.com/api/v4/projects/69589082/packages/npm/:_authToken=${GUARDIAN_NPM_TOKEN}
+//gitlab.com/api/v4/projects/71825808/packages/npm/:_authToken=${GUARDIAN_NPM_TOKEN}
+//gitlab.com/api/v4/projects/61976590/packages/npm/:_authToken=${POLICY_SDK_READ_NPM_TOKEN}
