--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
   },
   "dependencies": {
     "@chainlink/contracts": "^1.3.0",
+    "@guardian-network/policy-contracts": "^0.1.3",
     "@openzeppelin/contracts": "^5.3.0",
     "@solidity-parser/parser": "^0.18.0",
     "dotenv": "^16.4.5",
