package.json: add several deploy script

--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "check:ts:dev": "tsc -p tsconfig.json --noEmit",
     "clean": "pnpm remove:dist && pnpm remove:contracts && pnpm remove:typechain",
     "copy-dts": "copyfiles -u 1 \"src/**/*.d.ts\" dist",
+    "deploy:amoy": "pnpm deploy:noNetwork amoy",
+    "deploy:development": "pnpm deploy:noNetwork development",
+    "deploy:noNetwork": "pnpm exec hardhat run hardhat-scripts/deployModules.ts --network",
+    "deploy:noNetwork:force": "pnpm rimraf ignition/deployments && pnpm deploy:noNetwork",
     "format:all:fix": "pnpm format:sol:fix && pnpm format:ts:fix",
     "format:ts:fix": "pnpm exec prettier -w -c \"src/**/*.ts\" \"test/**/*.ts\" \"hardhat-scripts/**/*.ts\" \"config-hardhat/**/*.ts\" \"ignition/**/*.ts\"",
     "format:sol:fix": "pnpm exec prettier --plugin=prettier-plugin-solidity -w -c \"contracts/**/*.sol\"",
