--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@guardian-network:registry": "https://gitlab.com/api/v4/projects/71825808/packages/npm/"
   },
   "scripts": {
-    "build": "tsc -p tsconfig-prod.json && pnpm format:ts:fix && pnpm copy-dts",
+    "build": "tsc -p tsconfig-prod.json && pnpm build:contracts && pnpm format:ts:fix && pnpm copy-dts",
     "build:contracts": "pnpm exec hardhat compile",
     "build:contracts:force": "pnpm build:contracts --force",
     "check": "pnpm lint:ts && pnpm check:ts",
