--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
   },
   "dependencies": {
     "@chainlink/contracts": "^1.3.0",
-    "@guardian-network/policy-contracts": "^0.1.3",
+    "@guardian-network/policy-contracts": "0.2.0",
     "@openzeppelin/contracts": "^5.3.0",
     "@solidity-parser/parser": "^0.18.0",
     "dotenv": "^16.4.5",
